tests/snapshots/examples_fixtures/type_system__failing__25_adt_mixed_constructors_in_match.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/25_adt_mixed_constructors_in_match.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/25_adt_mixed_constructors_in_match.flx:14:5
   |
14 |     match x {
   |     ^^^^^^^^^
15 |         A1 -> 1,
   | ^^^^^^^^^^^^^^^^
16 |         B1 -> 2,
   | ^^^^^^^^^^^^^^^^
17 |     }
   | ^^^^^

Note:
  expected type: A
  found type: B
  the conflicting types meet at this expression

Help:
  These two types are not compatible.


error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/25_adt_mixed_constructors_in_match.flx:14:5
   |
14 |     match x {
   |     ^^^^^^^^^
15 |         A1 -> 1,
   | ^^^^^^^^^^^^^^^^
16 |         B1 -> 2,
   | ^^^^^^^^^^^^^^^^
17 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.

Found 2 errors.
== stdout ==
<not executed>
